@startuml

interface IUser{
}
sqlServerUser..-up-|>IUser
mysqlUser..-up-|>IUser
interface IDepartment{
}
sqlServerDepartment..-up-|>IDepartment
mysqlDepartment..-up-|>IDepartment




class DataAccess{
+CreateUser()
+CreateDepartment()
}
note "反射" as N1
N1 -left-.. DataAccess
DataAccess..>IUser
DataAccess..>IDepartment

@enduml